--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>WeatherApp</title>
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/48938155eb24b4ccdde09426066869504c6dab3c/dist/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Cormorant" rel="stylesheet">
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
+      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBbS5mw19ty_wOIyRimbNgWkFijG64qhc"
+  type="text/javascript"></script>
   </head>
   <body>
     <div id="main" class="container"></div>
